#167: refactor OAS Customizers - squash declarations into one line; preserve order by using ordered data structures